redo char controller

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="actions">
       <button class="btn" id="interact">Interact</button>
       <button class="btn" id="run">Run</button>
+      <button class="btn" id="jump">Jump</button>
     </div>
   </div>
 
