default full mode

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="hud">
     <div id="modeToggle">
       <label>
-        <input type="checkbox" id="fullModeCheckbox" />
+        <input type="checkbox" id="fullModeCheckbox" checked />
         Full mode (textures/models)
       </label>
     </div>
